# codeagent

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CodeAgent.spec  LICENSE  README.md  build_mac_dmg.sh  bundled_tools.py  codeagent.icns  codeagent.py  install.ps1  install.sh  make_dmg.sh  make_icon.py  package_launcher.py  prepare_bundle_tools.py  pyproject.toml  refresh_title.py  run.ps1  run.sh  setup.py
codeagent/: __init__.py  __main__.py  webui.html
config/: codeagent.setup.json
deploy/: supervisord.conf
docs/: AGNES_API.md  CONTEXT_COMPACT.md  DEBUG_CONTEXT_INDICATOR.md  ENV_REFERENCE.md  IMAGE_GEN_PROVIDERS.md  MODEL_PROVIDERS.md  MULTI_PRODUCT.md  PER_SESSION_MODEL.md  agent-frontend-sanity-check-strategy.md  agent-management-redesign.md  audit-agent-runtime-2026-06-16.md  audit-context-compact-2026-06-16.md  audit-stability-compat-cost-2026-06-17.md  audit-webui-2026-06-16.md  context-compact-strategy-v3.md  context-compact-summary-prompt-v1.md  context-compact-summary-prompt-v2.md  full-chain-trace-audit.md  literature-review.md  self-iteration.md  task-codeagent-persona-extract.md  开发与运行说明.md  系统架构文档.md
packaging/: CodeAgent.spec  CodeAgent.windows.spec  build_mac_dmg.sh  make_dmg.sh  make_icon.py  package_launcher.py
seed/: __init__.py  _session_cache.py  agent_context.py  agent_runtime.py  browser.py  chat_events.py  commands.py  cron_sched.py  engine.py  env_config.py  execution.py  llm_exec.py  llm_presets.py  llm_sess.py  mem_bridge.py  mem_sys.py  message_api.py  models.py  proj_reg.py  proj_todos.py  routing.py  safety.py  sess_store.py  session_title.py  transcript_store.py  turn_loop.py  webhook_dedup.py
seed_engine/: __init__.py  _session_cache.py  agent_runtime.py  commands.py  config_plane.py  cron_sched.py  engine.py  env_config.py  execution.py  llm_presets.py  llm_sess.py  mem_bridge.py  message_api.py  pyproject.toml  routing.py  sess_store.py  session_title.py  transcript_store.py  turn_loop.py
seed_engine/config/: __init__.py  config_loader.py  config_model.py
seed_services/: __init__.py  pyproject.toml  webhook_dedup.py
seed_tools/: __init__.py  _registration.py  api_docs_tools.py  artifact_helpers.py  artifact_tools.py  browser_a.py  code_analyze_tools.py  code_check_tool.py  cron_apply_tools.py  cron_query_tools.py  db_tools.py  deploy_tools.py  deps_check_tools.py  diagram_tools.py  executor.py  file_read_tools.py  file_write_tools.py  git_a.py  hub_tools.py  imports.py  memory_search_tools.py  misc_tools.py  models.py  notebook_tools.py  pipeline_tools.py  project_tools.py  pyproject.toml  refactor_tools.py  registry.py  scaffold_tools.py  search_tools.py  self_reflect_tools.py  shell_runner.py  shell_tool.py  test_gen_tools.py  todo_tools.py  web_tools.py
skills/: trace-config-implementation.md
src/: __init__.py  __main__.py  engine.py  env_config.py  execution.py  llm_presets.py  main.py  message_api.py  persistence.py  routing.py  session_title.py  transcript_store.py  ui_settings.py  web_login.html  webui_auth.py
super-mines-game/: app.py  run.py
tests/: __init__.py  conftest.py  test_api_chat_multimodal.py  test_attachments.py  test_auto_continue.py  test_bootstrap.py  test_compact_state.py  test_diary.py  test_execution.py  test_folder_picker.py  test_image_gen.py  test_image_understanding.py  test_media.py  test_music_gen.py  test_orchestrator.py  test_persistence.py  test_persona_init.py  test_persona_loading.py  test_plugin_skills.py  test_pricing.py  test_process_ports.py  test_smoke.py  (+18 more)
(+425 files in other folders)
