[project]
name = "seed-tools"
version = "1.0.0"
description = "Autonomous agent tool implementations — fully decoupled from engine"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CodeAgent Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0", "bandit>=1.7.0"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM"]
ignore = ["E501", "N818"]
